--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,108 @@
+body {
+  background-color: #FFFFFF;
+}
+
 .App {
-  text-align: center;
+  font-family: 'Fredoka One', cursive;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
   height: 50px;
   width: 50px;
 }
 
+input {
+  margin: 10px;
+  font-family: 'Fredoka One', cursive;
+  font-size: 14px;
+}
+
+h2 {
+  font-size: 3em;
+  padding: 0;
+  margin: 0;
+  letter-spacing: 2px;
+}
+
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: #05386B;
+  height: 50px;
   padding: 20px;
+  color: #fff;
+  display: flex;
+}
+
+.App-info {
+  background-color: #9A1750;
+  height: 75px;
+  color: #FFFFFF;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.App-info-1 {
+  display: flex;  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.App-info-1,
+.App-info-2,
+.App-info-3 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.button {
+  cursor: pointer;
   color: white;
+  font-weight: bold;
+  transition: 0.4s all;
+  background-color: #651136;
+  border: 1px solid #651136;
 }
 
-.App-intro {
-  font-size: large;
+.button:hover {
+  background-color: #9A1750;
+  border: 1px solid #ffffff;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.player-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.player {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #000;
+  padding: 10px;
+}
+
+.player .button {
+  margin: 10px;
+  font-size: 12px;
+  font-weight: normal;
+  padding: 10px;
+  text-align:center;
+  border: none;
+}
+
+.player .button.profit {
+  background-color: #2cc66d;
+}
+
+.player .button.profit:hover {
+  background-color: #2fd072;
+}
+
+.player .button.loss {
+  background-color: #c80202;
+}
+
+.player .button.loss:hover {
+  background-color: #e10707;
 }
